--- a/index.html
+++ b/index.html
@@ -382,9 +382,9 @@
                 <div class="row justify-content-center text-center">
                     <div class="col-xl-8 col-lg-10 mb-5">
                         <div class="hero-content-wrap">
-                            <h1 class="fw-bold display-5" data-aos="fade-up"> World Class <span class="text-primary">AI Assisted</span> Developer Self Service Portal (IDP) for instant software delivery / code deployment to multi-cloud environments from day one!</h1>
-                            <p class="lead" data-aos="fade-up" data-aos-delay="50">Empower Your IT Engineering Team & Developers: Effortlessly transform the software delivery / code deployment process with our self-service Platform Engineering / IDP solution.
-                               With seamless integrations, provision a cloud infra, build & deployment automations, rollback, scaling, monitoring, and security, improving productivity (5x) and reducing costs (10x).</p>
+                            <h1 class="fw-bold display-5" data-aos="fade-up"> World Class <span class="text-primary">AI Assisted</span> Developer Self Service Platform (IDP) for instant software delivery from day one!</h1>
+                            <p class="lead" data-aos="fade-up" data-aos-delay="50">Devozy.ai is the AI-powered self-service platform (IDP) designed to empower developers / IT engineering teams by shifting the focus from traditional DevOps to Developer Experience (DevEx).
+                               With seamless integrations with multi-cloud platforms, instant provision of cloud infra, build & deployment automations, rollback, scaling, monitoring, and security, improving productivity (5x) and reducing costs (10x).</p>
                             <div class="action-btns text-center pt-4" data-aos="fade-up" data-aos-delay="100">
                                 <a class="btn btn-primary mt-3 mt-lg-0 mt-md-0 " href="request-demo.html">Request
                                     Free demo</a>
@@ -426,10 +426,9 @@
                                         src="assets/img/shape/arrow-red.png" alt="arrow" class="ms-1"></span>
                                 <p align=" justify" class="text-white mb-0">Experience the ultimate all-in-one self
                                     service platform that encompasses
-                                    Agile project management - Kanban board, CICD Pipelines, Environment provisioning,
-                                    Infrastructure
-                                    as Code (IaC), Track your production incidents/problems/changes. Platform
-                                    Engineering to Seamlessly address any challenges of
+                                    Agile project management - Kanban board (to replace Jira), Build & deployment pipelines, App environment provisioning,
+                                    Multi-cloud Infrastructure Management, Track your production incidents/problems/changes. 
+                                    Platform Engineering to Seamlessly address any challenges of
                                     your IT Engineering team & developers, streamline IT development & support
                                     operations, and foster innovation with our comprehensive connected suite.
                                     Join us in simplifying complexity!</p>
@@ -455,7 +454,7 @@
                                                     </div>
                                                 </span>
                                                 <!-- <h3 class="mt-3 mb-1"><span class="counter">4.5</span>k+</h3> -->
-                                                <p class="mb-0">Agile Project Management - Kanban board</p>
+                                                <p class="mb-0">Agile Project Management - Kanban board (To replace Jira) Maintain Epic, Stories, Sprints, Project Reports </p>
                                             </div>
                                         </div>
                                         <div class="col-lg-12">
@@ -468,7 +467,7 @@
 
                                                 </span>
                                                 <!-- <h3 class="mt-3 mb-1"><span class="counter">15</span>k+</h3> -->
-                                                <p class="mb-0">DevSecOps - CICD Pipelines / Project Environments</p>
+                                                <p class="mb-0">DevSecOps - Instant CICD Pipelines, Project Environments, Pull Request, Static Code Scan, Run Testing</p>
                                             </div>
                                         </div>
                                     </div>
@@ -488,7 +487,7 @@
 
                                                 </span>
                                                 <!-- <h3 class="mt-3 mb-1"><span class="counter">55</span>k+</h3> -->
-                                                <p class="mb-0">Infra Management - Multi-Cloud / IaC</p>
+                                                <p class="mb-0">Multi-Cloud Infra Management - Cloud Brokerage, Cost Optimization, Workload Migration</p>
 
                                             </div>
                                         </div>
@@ -537,15 +536,15 @@
 
                                             <li class="py-1">
                                                 <i class="fas  fa-times-circle me-2 text-danger"></i>
-                                                Multiple tools/products/consoles for managing cloud / Infra, CICD, agile PM, repository
+                                                Multiple tools/products/consoles for managing cloud / Infra, CICD, agile PM, code repository
                                             </li>
                                             <li class="py-1">
                                                 <i class="fas fa-times-circle me-2 text-danger"></i>
-                                                Additional overhead for Engineering manager / SDM / TPM for managing multiple teams
+                                                Additional overhead for Engineering manager / SDM / TPM for managing the infra teams
                                             </li>
                                             <li class="py-1">
                                                 <i class="fas  fa-times-circle me-2 text-danger"></i>
-                                                High Dependency with CICD & Infra teams (that slowdown development turnaround time)
+                                                High Dependency with CICD & Infra teams (that slowdown production time-to-market)
                                             </li>
                                             <li class="py-1">
                                                 <i class="fas fa-times-circle me-2 text-danger"></i>
@@ -553,7 +552,7 @@
                                             </li>
                                             <li class="py-1">
                                                 <i class="fas fa-times-circle me-2 text-danger"></i>
-                                                Multiple hops to troubleshoot issues
+                                                Multiple hops to troubleshoot deployment / infra issues
                                             </li>
 
 
@@ -571,11 +570,11 @@
                                             data-aos-delay="50">
                                             <li class="py-1">
                                                 <i class="fas fa-check-circle me-2"></i>
-                                                Lean DevOps / Infra team is sufficient
+                                                Lean or no DevOps / Infra team is required
                                             </li>
                                             <li class="py-1">
                                                 <i class="fas fa-check-circle me-2"></i>
-                                                Developer Self Service Portal enables developer to quickly promote code or create CICD / project environments
+                                                Developer Self Service Platform enables developer to quickly deliver the code or create project environments
                                             </li>
 
                                             <li class="py-1">
@@ -584,7 +583,7 @@
                                             </li>
                                             <li class="py-1">
                                                 <i class="fas fa-check-circle me-2"></i>
-                                                Engineering manager / SDM / TPM manages only development team
+                                                Engineering manager / SDM / TPM manages only development team and focus on addressing Business problems
                                             </li>
                                             <li class="py-1">
                                                 <i class="fas  fa-check-circle me-2"></i>
@@ -596,7 +595,7 @@
                                             </li>
                                             <li class="py-1">
                                                 <i class="fas fa-check-circle me-2"></i>
-                                                Easy to troubleshoot issues
+                                                Easy to troubleshoot issues at one place
                                             </li>
                                         </ul>
                                     </div>
@@ -633,7 +632,7 @@
                 <div class="row justify-content-center align-content-center">
                     <div class="col-md-10 col-lg-8">
                         <div class="section-heading text-center mb-4">
-                            <h2>Developer Self-service Portal (IDP): Cutting-edge AI Features with Connected View platform</h2>
+                            <h2>Developer Self-service Platform (IDP): Cutting-edge AI Features with Connected View platform</h2>
                             <p align="justify">Developers and IT Engineering team can elevate IT software delivery
                                 through Agile Project Management features such as Kanban board,
                                 stories, tasks, sprints and project reports. DevSecOps ensures readymade IaC & CICD
@@ -1212,11 +1211,10 @@
                     <div class="col-lg-5 col-12">
                         <div class="feature-img-content">
                             <div class="section-heading" data-aos="fade-up">
-                                <h2>Agile Kanban Board: Streamlining Your IT Project Delivery </h2>
+                                <h2>Agile Kanban Board: IT project managment tool to replace Jira / Clickup / Asana</h2>
                                 <p>
-                                    Our Agile Project management Kanban board empowers your Engineering team to
-                                    orchestrate IT project deliveries
-                                    seamlessly. With an array of unique features like
+                                    Our Agile Project management tool empowers your Engineering team to
+                                    seamless on-boarding of multiple projects, team members, project allocations and Kanban board to manage & deliver the projects:
                                 </p>
                             </div>
 
@@ -1225,23 +1223,23 @@
                                 <ul class="list-unstyled d-flex flex-wrap flex-column  mt-4" data-aos="fade-up"
                                     data-aos-delay="50">
                                     <li class="py-1">
-                                        <i class="fas fa-check-circle me-2"></i>Drag & Drop Kanban Boards
+                                        <i class="fas fa-check-circle me-2"></i>Kanban Board with Drag & Drop tickets
                                     </li>
                                     <li class="py-1">
                                         <i class="fas  fa-check-circle me-2"></i>Intuitive Story/Epic/Task creation
                                     </li>
                                     <li class="py-1">
-                                        <i class="fas fa-check-circle me-2"></i>Meticulous Sprint planning
+                                        <i class="fas fa-check-circle me-2"></i>Refinement, Sprint planning, Sprint Ceremonies
                                     </li>
                                     <li class="py-1">
-                                        <i class="fas fa-check-circle me-2"></i>Precise story point estimation
+                                        <i class="fas fa-check-circle me-2"></i>Gamified Story Point estimation (Poker)
                                     </li>
                                     <li class="py-1">
-                                        <i class="fas fa-check-circle me-2"></i>Real-time progress updates
+                                        <i class="fas fa-check-circle me-2"></i>Real-time progress updates with RAG indicator
                                     </li>
                                     <li class="py-1">
                                         <i class="fas fa-check-circle me-2"></i>Sprint reports - Velocity, Burn up/down,
-                                        Cumulative
+                                        Cumulative charts
                                     </li>
                                     <li class="py-1">
                                         <i class="fas fa-check-circle me-2"></i>Seamless integration with communication
@@ -1314,7 +1312,7 @@
                                     Introducing Devozy, our avant-garde DevSecOps & Multi-Cloud accelerator platform,
                                     designed to
                                     streamline the journey into build and deployment automations (CICD) using Developer
-                                    self service portal
+                                    self service platform
                                 </p>
                             </div>
                             <div class="app-two-feature-two-content">
@@ -1335,7 +1333,7 @@
                                         Kubernetes
                                     </li>
                                     <li class="py-1">
-                                        <i class="fas  fa-check-circle me-2"></i>Run Subsequent deployments & Schedule
+                                        <i class="fas  fa-check-circle me-2"></i>Run Continuoues deployments & Schedule
                                     </li>
                                     <li class="py-1">
                                         <i class="fas fa-check-circle me-2"></i>Project & Integration environment
@@ -1409,37 +1407,35 @@
                                 <h2> Mastering Infrastructure Management</h2>
                                 <p>
                                     Amplify operational efficiency with Devozy, our comprehensive infrastructure
-                                    management tool. We
-                                    ensure the seamless performance of your IT infrastructure by monitoring vital
-                                    aspects, such as.
+                                    management tool seamless managing your cloud infrastructure such as: 
                                 </p>
                             </div>
                             <div class="app-two-feature-two-content">
                                 <ul class="list-unstyled d-flex flex-wrap flex-column   mt-4" data-aos="fade-up"
                                     data-aos-delay="50">
                                     <li class="py-1">
-                                        <i class="fas fa-check-circle me-2"></i>Server Health
+                                        <i class="fas fa-check-circle me-2"></i>Server Health Monitoring - CPU, Memory and disk usage stats
                                     </li>
                                     <li class="py-1">
-                                        <i class="fas  fa-check-circle me-2"></i>Memory and disk usage
+                                        <i class="fas  fa-check-circle me-2"></i>Patching, upgrade softwares, app / app server bounces
                                     </li>
                                     <li class="py-1">
                                         <i class="fas fa-check-circle me-2"></i>Seamlessly scale instances to match
                                         increasing workloads
                                     </li>
                                     <li class="py-1">
-                                        <i class="fas fa-check-circle me-2"></i>manage cloud resources including VMs,
-                                        Storage, DBs, and container services,
+                                        <i class="fas fa-check-circle me-2"></i>Manage cloud resources such as Virtual machines,
+                                        Storage, Database, and Cloud native services
                                     </li>
                                     <li class="py-1">
-                                        <i class="fas fa-check-circle me-2"></i>Issuing critical security alerts
+                                        <i class="fas fa-check-circle me-2"></i>Critical security alerts
                                     </li>
                                     <li class="py-1">
                                         <i class="fas fa-check-circle me-2"></i>Optimize cloud cost through FinOps
                                         practices
                                     </li>
                                     <li class="py-1">
-                                        <i class="fas fa-check-circle me-2"></i>seamlessly migrate workloads between
+                                        <i class="fas fa-check-circle me-2"></i>Seamlessly migrate workloads between
                                         on-premises and cloud environments
                                     </li>
                                 </ul>
@@ -2391,7 +2387,7 @@
                     <div class="row justify-content-between align-items-center">
                         <div class="col-md-7 col-lg-7">
                             <div class="copyright-text">
-                                <p class="mb-lg-0 mb-md-0">&copy;Copyrights 2025 YozY Techlabs Pvt Ltd (Registered
+                                <p class="mb-lg-0 mb-md-0">&copy;Copyrights 2024-2026 YozY Techlabs Pvt Ltd (Registered
                                     under Govt. of India)</p>
                             </div>
                         </div>
