--- a/index.html
+++ b/index.html
@@ -2309,6 +2309,8 @@
                                     strengths: agile software development, advanced ITSM tools. We innovate to empower
                                     businesses in a dynamic tech world.</p>
 
+                                    <a href="https://www.producthunt.com/posts/devozy-ai?embed=true&utm_source=badge-featured&utm_medium=badge&utm_souce=badge-devozy&#0045;ai" target="_blank"><img src="https://api.producthunt.com/widgets/embed-image/v1/featured.svg?post_id=510883&theme=light" alt="Devozy&#0046;ai - A&#0032;self&#0045;service&#0032;platform&#0032;for&#0032;Developers&#0044;&#0032;IT&#0032;Engineering&#0032;teams | Product Hunt" style="width: 250px; height: 54px;" width="250" height="54" /></a>
+
                                 <!-- <form action="https://formsubmit.co/765398f4c5a268b79da32adb9a5c79c5" method="POST"  class="newsletter-form position-relative d-block d-lg-flex d-md-flex">
                                     <input type="text" class="input-newsletter form-control me-2" placeholder="Enter your email" name="email" required="" autocomplete="off">
                                     <input type="hidden" name="_next" value="#">
