--- a/index.html
+++ b/index.html
@@ -690,12 +690,12 @@
                                                 <div class="swiper-wrapper">
 
                                                     <div class="swiper-slide">
-                                                        <img src="dev.png" alt="feature tab" class="img-fluid mt-5">
+                                                        <img src="Dashboard.png" alt="feature tab" class="img-fluid mt-5">
 
                                                     </div>
 
                                                     <div class="swiper-slide">
-                                                        <img src="dev.png" alt="feature tab" class="img-fluid mt-5">
+                                                        <img src="Dashboard.png" alt="feature tab" class="img-fluid mt-5">
 
 
                                                     </div>
@@ -729,12 +729,12 @@
                                                 <div class="swiper-wrapper">
 
                                                     <div class="swiper-slide">
-                                                        <img src="multi.png" alt="feature tab" class="img-fluid mt-5">
+                                                        <img src="Multicloud Website.svg" alt="feature tab" class="img-fluid mt-5">
 
                                                     </div>
 
                                                     <div class="swiper-slide">
-                                                        <img src="multi.png" alt="feature tab" class="img-fluid mt-5">
+                                                        <img src="Cloud storage.svg" alt="feature tab" class="img-fluid mt-5">
 
 
                                                     </div>
@@ -1362,7 +1362,7 @@
                                             <div class="img-bg-shape position-absolute ">
                                                 <!-- <img src="assets/img/integations/shape.svg"   alt="integations"> -->
                                             </div>
-                                            <img src="devozy1.png" class="img-fluid  rounded-custom shadow-lg"
+                                            <img src="prjlist1.png" class="img-fluid  rounded-custom shadow-lg"
                                                 alt="softtent">
                                         </div>
                                     </div>
@@ -1371,7 +1371,7 @@
                                             <div class="img-bg-shape position-absolute ">
                                                 <!-- <img src="assets/img/integations/shape.svg"   alt="integations"> -->
                                             </div>
-                                            <img src="devozy1.png" class="img-fluid  rounded-custom shadow-lg"
+                                            <img src="prjlist1.png" class="img-fluid  rounded-custom shadow-lg"
                                                 alt="softtent">
                                         </div>
                                     </div>
@@ -1380,7 +1380,7 @@
                                             <div class="img-bg-shape position-absolute ">
                                                 <!-- <img src="assets/img/integations/shape.svg"   alt="integations"> -->
                                             </div>
-                                            <img src="devozy1.png" class="img-fluid  rounded-custom shadow-lg"
+                                            <img src="prjlist1.png" class="img-fluid  rounded-custom shadow-lg"
                                                 alt="softtent">
                                         </div>
                                     </div>
@@ -1452,7 +1452,7 @@
                                             <div class="img-bg-shape position-absolute ">
                                                 <!-- <img src="assets/img/integations/shape.svg"   alt="integations"> -->
                                             </div>
-                                            <img src="infrapng.png" class="img-fluid  rounded-custom shadow-lg"
+                                            <img src="Finops website.svg" class="img-fluid  rounded-custom shadow-lg"
                                                 alt="softtent">
                                         </div>
                                     </div>
@@ -1461,7 +1461,7 @@
                                             <div class="img-bg-shape position-absolute ">
                                                 <!-- <img src="assets/img/integations/shape.svg"   alt="integations"> -->
                                             </div>
-                                            <img src="infrapng.png" class="img-fluid  rounded-custom shadow-lg"
+                                            <img src="infra2.png" class="img-fluid  rounded-custom shadow-lg"
                                                 alt="softtent">
                                         </div>
                                     </div>
@@ -1470,7 +1470,16 @@
                                             <div class="img-bg-shape position-absolute ">
                                                 <!-- <img src="assets/img/integations/shape.svg"   alt="integations"> -->
                                             </div>
-                                            <img src="infrapng.png" class="img-fluid  rounded-custom shadow-lg"
+                                            <img src="infra3.png" class="img-fluid  rounded-custom shadow-lg"
+                                                alt="softtent">
+                                        </div>
+                                    </div>
+                                    <div class="swiper-slide">
+                                        <div class="feature-shape-img position-relative mt-5 mt-lg-0">
+                                            <div class="img-bg-shape position-absolute ">
+                                                <!-- <img src="assets/img/integations/shape.svg"   alt="integations"> -->
+                                            </div>
+                                            <img src="infra1.png" class="img-fluid  rounded-custom shadow-lg"
                                                 alt="softtent">
                                         </div>
                                     </div>
@@ -1658,7 +1667,7 @@
                 <div class="row align-items-center justify-content-lg-between">
                     <div class="col-lg-6 col-xl-6 col-md-12">
                         <div class="app-two-feature-two-img">
-                            <img src="assets/img/customimage/1.png " width=400 alt="feature image" class="img-fluid" />
+                            <img src="assets/img/customimage/iPhone 14.png " width=400 alt="feature image" class="img-fluid" />
                         </div>
                     </div>
                     <div class="col-xl-5 col-lg-5">
