--- a/contact-us.html
+++ b/contact-us.html
@@ -192,7 +192,7 @@
                             <h2> We're here to help – Let's Chat!</h2>
                             <p>Get in touch today and let us help you find the solution you're looking for!</p>
                         </div>
-                        <form action="https://formsubmit.co/765398f4c5a268b79da32adb9a5c79c5" method="post"
+                        <form action="https://formsubmit.co/support@yozytech.com" method="post"
                             class="register-form">
                             <input type="hidden" name="_next" value="https://devozy.ai/thankyou.html">
                             <div class="row">
