--- a/index.html
+++ b/index.html
@@ -695,7 +695,7 @@
                                                     </div>
 
                                                     <div class="swiper-slide">
-                                                        <img src="Dashboard.png" alt="feature tab" class="img-fluid mt-5">
+                                                        <img src="CICD runtime step - 4.png" alt="feature tab" class="img-fluid mt-5">
 
 
                                                     </div>
@@ -795,6 +795,14 @@
                                                     </div>
                                                     <div class="swiper-slide">
                                                         <img src="./assets/dezoyimages/agile/sprintbuntup.png" alt="feature tab" class="img-fluid mt-5">
+
+                                                    </div>
+                                                    <div class="swiper-slide">
+                                                        <img src="./assets/dezoyimages/agile/History Sprint.png" alt="feature tab" class="img-fluid mt-5">
+
+                                                    </div>
+                                                    <div class="swiper-slide">
+                                                        <img src="./assets/dezoyimages/agile/Sprint Details.png" alt="feature tab" class="img-fluid mt-5">
 
                                                     </div>
 
@@ -1288,6 +1296,10 @@
                                         <img src="./assets/dezoyimages/agile/sprintbuntup.png" alt="feature tab" class="img-fluid mt-5">
 
                                     </div>
+                                    <div class="swiper-slide">
+                                        <img src="./assets/dezoyimages/agile/Sprint Details.png" alt="feature tab" class="img-fluid mt-5">
+
+                                    </div>
 
                                 </div>
                             </div>
@@ -1447,6 +1459,15 @@
                         <div class="position-relative w-100" data-aos="fade-up" data-aos-delay="50">
                             <div class="swiper testimonialSwipercustom">
                                 <div class="swiper-wrapper">
+                                    <div class="swiper-slide">
+                                        <div class="feature-shape-img position-relative mt-5 mt-lg-0">
+                                            <div class="img-bg-shape position-absolute ">
+                                                <!-- <img src="assets/img/integations/shape.svg"   alt="integations"> -->
+                                            </div>
+                                            <img src="FINOPS STORAGE.png" class="img-fluid  rounded-custom shadow-lg"
+                                                alt="softtent">
+                                        </div>
+                                    </div>
                                     <div class="swiper-slide">
                                         <div class="feature-shape-img position-relative mt-5 mt-lg-0">
                                             <div class="img-bg-shape position-absolute ">
@@ -1765,8 +1786,8 @@
                                             class="position-relative single-pricing-wrap rounded-custom bg-white custom-shadow p-5 mb-4 mb-lg-0">
                                             <div class="pricing-header mb-32">
                                                 <h3 class="package-name text-primary d-block">Business Basic </h3>
-                                                <h4 class="display-6 fw-semi-bold">$99<span>/month**</span></h4>
-                                                <span>Free For 30 Days</span>
+                                                <!-- <h4 class="display-6 fw-semi-bold">$99<span>/month**</span></h4> -->
+                                                <span>Get Started Quickly with Essential Features.</span>
 
                                             </div>
                                             <div class="pricing-info mb-4">
@@ -1809,7 +1830,8 @@
                                             class="position-relative single-pricing-wrap rounded-custom bg-dark text-white p-5 mb-4 mb-lg-0">
                                             <div class="pricing-header mb-32">
                                                 <h3 class="package-name text-warning d-block">Business Standard</h3>
-                                                <h4 class="display-6 fw-semi-bold">$299<span>/month**</span></h4>
+                                                <span>The Perfect Balance of Features and Scalability.</span>
+                                                <!-- <h4 class="display-6 fw-semi-bold">$299<span>/month**</span></h4> -->
                                             </div>
                                             <div class="pricing-info mb-4">
                                                 <ul class="pricing-feature-list list-unstyled">
@@ -1849,7 +1871,8 @@
                                             class="position-relative single-pricing-wrap rounded-custom bg-white custom-shadow p-5 mb-4 mb-lg-0">
                                             <div class="pricing-header mb-32">
                                                 <h3 class="package-name text-primary d-block">Business Plus</h3>
-                                                <h4 class="display-6 fw-semi-bold">$999<span>/month**</span></h4>
+                                                <span>Enterprise-Ready Excellence</span>
+                                                <!-- <h4 class="display-6 fw-semi-bold">$999<span>/month**</span></h4> -->
                                             </div>
                                             <div class="pricing-info mb-4">
                                                 <ul class="pricing-feature-list list-unstyled">
