--- a/contact-us.html
+++ b/contact-us.html
@@ -97,11 +97,11 @@
                                     Blog
                                 </a>
                                 <div class="dropdown-menu border-0 mt-1 rounded-custom shadow py-1 bg-white">
-                                    <a target="_blank" class="dropdown-item drop-title" href="blog/devops_platform_engineering.html">DevSecOps Platform Engineering</a>
-                                    <a target="_blank" class="dropdown-item" href="blog/devops_vs_devsecops.html">DevOps Vs DevSecOps</a>
-                                    <a target="_blank" class="dropdown-item" href="blog/devozy_advantages.html">Devozy Advantages</a>
-                                    <a target="_blank" class="dropdown-item" href="blog/devozy_Setup.html">Devozy Setup</a>
-                                    <a target="_blank" class="dropdown-item" href="blog/devozy_trend.html">DevOps Trends</a>
+                                    <a target="_self" class="dropdown-item drop-title" href="blog/devops_platform_engineering.html">DevSecOps Platform Engineering</a>
+                                    <a target="_self" class="dropdown-item" href="blog/devops_vs_devsecops.html">DevOps Vs DevSecOps</a>
+                                    <a target="_self" class="dropdown-item" href="blog/devozy_advantages.html">Devozy Advantages</a>
+                                    <a target="_self" class="dropdown-item" href="blog/devozy_Setup.html">Devozy Setup</a>
+                                    <a target="_self" class="dropdown-item" href="blog/devozy_trend.html">DevOps Trends</a>
                             </li>
                             <li><a href="#Pricing" class="nav-link">Pricing</a></li>
                             <li><a href="faq.html" class="nav-link">FAQ</a></li>
@@ -118,9 +118,9 @@
                                 data-bs-title="Light"><i class="flaticon-sun-1 fs-lg"></i></div>
                             <div class="tt-theme-dark" data-bs-toggle="tooltip" data-bs-placement="left"
                                 data-bs-title="Dark"><i class="flaticon-moon-1 fs-lg"></i></div>
-                        </a> <a href="https://web.devozy.ai/" target="_blank"
+                        </a> <a href="https://web.devozy.ai/" target="_self"
                             class="btn btn-link text-decoration-none me-2">Login</a>
-                        <a href="request-demo.html" class="btn btn-primary" target="_blank">Get Started</a>
+                        <a href="request-demo.html" class="btn btn-primary" target="_self">Get Started</a>
                     </div>
                 </div>
             </nav>
@@ -168,13 +168,13 @@
                         </li>
 
                         <li><a href="index.html#pricing" class="nav-link">Pricing</a></li>
-                        <li><a target="_blank" href="https://yozytech.com/" class="nav-link">Company</a></li>
+                        <li><a target="_self" href="https://yozytech.com/" class="nav-link">Company</a></li>
                       
                     </ul>
                     <div class="action-btns mt-4 ps-3">
-                        <a href="https://web.devozy.ai/" target="_blank" class="btn btn-outline-primary me-2">Sign
+                        <a href="https://web.devozy.ai/" target="_self" class="btn btn-outline-primary me-2">Sign
                             In</a>
-                        <a href="request-demo.html" target="_blank" class="btn btn-primary">Get Started</a>
+                        <a href="request-demo.html" target="_self" class="btn btn-primary">Get Started</a>
                     </div>
                 </div>
             </div>
@@ -313,14 +313,14 @@
                             <div class="footer-single-col text-start text-lg-end text-md-end">
                                 <ul class="list-unstyled list-inline footer-social-list mb-0">
                                     <li class="list-inline-item"><a href="https://www.facebook.com/devozy/"
-                                            target="_blank"><i class="fab fa-facebook-f"></i></a></li>
+                                            target="_self"><i class="fab fa-facebook-f"></i></a></li>
                                     <li class="list-inline-item"><a href="https://twitter.com/yozytechnologi1"
-                                            target="_blank"><i class="fab fa-twitter"></i></a></li>
+                                            target="_self"><i class="fab fa-twitter"></i></a></li>
                                     <li class="list-inline-item"><a
                                             href="https://www.linkedin.com/company/71981297?isFollowingPage=true"
-                                            target="_blank"><i class="fab fa-linkedin"></i></a></li>
+                                            target="_self"><i class="fab fa-linkedin"></i></a></li>
                                     <li class="list-inline-item"><a href="https://www.instagram.com/platform_devozy/"
-                                            target="_blank"><i class="fab fa-instagram"></i></a></li>
+                                            target="_self"><i class="fab fa-instagram"></i></a></li>
                                 </ul>
                             </div>
                         </div>
