Home page changes
Major changes has been made in the home page

--- a/Innovatie Integration/azure-integration.html
+++ b/Innovatie Integration/azure-integration.html
@@ -885,12 +885,12 @@
                     <div class="col-lg-8 col-md-10">
                         <div class="subscribe-info-wrap text-center position-relative z-2">
                             <div class="section-heading">
-                                <h4 class="h5 text-warning">Let's Try! Get Free Support</h4>
+                                <h4 class="h5 text-warning">Let's Talk! Request for a Demo!</h4>
                                 <h2>Start Your 30-Days Free Trial</h2>
                                 <p>Experience the power of DEVOZY's expertise today.</p>
                             </div>
                             <div class="form-block-banner mw-60 m-auto mt-5">
-                                <a href="../request-demo.html" class="btn btn-primary">Contact with Us</a>
+                                <a href="../request-demo.html" class="btn btn-primary">Book a Demo</a>
                                 <a href="http://www.youtube.com/watch?v=hAP2QF--2Dg" class="text-decoration-none popup-youtube d-inline-flex align-items-center watch-now-btn ms-lg-3 ms-md-3 mt-3 mt-lg-0">
                                     <i
                                             class="fas fa-play"></i> Watch Demo </a>
