--- a/devozy.ai/qliktalend_devops.html
+++ b/devozy.ai/qliktalend_devops.html
@@ -806,14 +806,14 @@
                                     <!-- <h5>Shifting the Focus to Developer-Centric IT Operations</h5> -->
                                     <!-- <p>Take your Talend build and deployment (CICD) to the next level with Devozy.AI, the ultimate Internal Developer Platform (IDP). Empower your Talend developers to deliver the job changes seamlessly and with unmatched efficiency (multiple times a day)! </p> -->
                                 <!-- </div> -->
-                                <h4>What Makes Devozy.AI Stand Out?</h4>
+                                <h4>What Makes Devozy.AI Stand Out for Qlik Talend?</h4>
                                 <ul>
-                                    <li> <strong>Pre-Built CI/CD Pipelines</strong> Designed specifically for Talend, integrated effortlessly with Jenkins CI.</li>
+                                    <li> <strong>Pre-Built CI/CD Pipelines</strong> Designed specifically for Qlik Talend, integrated effortlessly with Jenkins CI.</li>
                                     <li> <strong>Smart Build Automation</strong> Manage incremental job changes or full builds with ease.</li>
-                                    <li> <strong>Automated Job Hierarchies</strong> Simplify complex builds of parent-child Talend jobs with zero manual effort.</li>
-                                    <li> <strong>Talend Cloud Orchestration</strong> Efficiently integrate Talend Cloud to publish artifacts and create tasks across environments/workspaces.</li>
-                                    <li> <strong>Nexus Integration</strong> Seamlessly integrate with Nexus for publishing your Talend artifacts.</li>
-                                    <li> <strong>Unified Dashboard Overview</strong> Centralize your Talend deployments, Jenkins logs, number of jobs built, time taken, Nexus, and Talend Cloud details all in one place.</li>
+                                    <li> <strong>Automated Job Hierarchies</strong> Simplify complex builds of parent-child Qlik Talend jobs with zero manual effort.</li>
+                                    <li> <strong>Qlik Talend Cloud Orchestration</strong> Efficiently integrate Qlik Talend Cloud to publish artifacts and create tasks across environments/workspaces.</li>
+                                    <li> <strong>Nexus Integration</strong> Seamlessly integrate with Nexus for publishing your Qlik Talend artifacts.</li>
+                                    <li> <strong>Unified Dashboard Overview</strong> Centralize your Qlik Talend deployments, Jenkins logs, number of jobs built, time taken, Nexus, and Qlik Talend Cloud details all in one place.</li>
                                 </ul>
                                 
                                   
@@ -846,7 +846,7 @@
                                         width="936" 
                                         height="1350"
                                     >
-                                        <source src="#" type="video/mp4">
+                                        <source src="../Devozy_Talend_CICD_Dashboard.mp4" type="video/mp4">
                                         Your browser does not support the video tag.
                                     </video>
                                 </div>
