--- a/blog-single.html
+++ b/blog-single.html
@@ -1224,18 +1224,18 @@
                     <div class="col-lg-8 col-md-10">
                         <div class="subscribe-info-wrap text-center position-relative z-2">
                             <div class="section-heading">
-                                <h4 class="h5 text-warning">Let's Try! Get Free Support</h4>
-                                <h2>Start Your 14-Day Free Trial</h2>
+                                <h4 class="h5 text-warning">Let's Talk! Request for a Demo!</h4>
+                                <h2>Start Your 30-Days Free Trial</h2>
                                 <p>We can help you to create your dream website for better business revenue.</p>
                             </div>
                             <div class="form-block-banner mw-60 m-auto mt-5">
-                                <a href="contact-us.html" class="btn btn-primary">Contact with Us</a>
+                                <a href="contact-us.html" class="btn btn-primary">Book a Demo</a>
                                 <a href="http://www.youtube.com/watch?v=hAP2QF--2Dg" class="text-decoration-none popup-youtube d-inline-flex align-items-center watch-now-btn ms-lg-3 ms-md-3 mt-3 mt-lg-0"> <i
                                             class="fas fa-play"></i> Watch Demo </a>
                             </div>
                             <ul class="nav justify-content-center subscribe-feature-list mt-4">
                                 <li class="nav-item">
-                                    <span><i class="far fa-check-circle text-primary me-2"></i>Free 14-day trial</span>
+                                    <span><i class="far fa-check-circle text-primary me-2"></i>Free 30-days trial</span>
                                 </li>
                                 <li class="nav-item">
                                     <span><i
